fixed vertical alignment of buttons

--- a/css/custom.css
+++ b/css/custom.css
@@ -504,3 +504,8 @@ input[type="checkbox"] + label span i.material-icons {
 .field {
   margin-bottom:25px !important;
 }
+
+.deleteSpan, #saveText {
+  line-height: 24px;
+  vertical-align: middle;
+}
